refactor(config) : tentando arruamr a persistencia de treino em alunos